Extend LSP capabilities: 17 protocol features via TreeSitter adapter (#387)