@@ -46,14 +46,11 @@ Run a quick smoke test by sending a raw LSP `initialize` request via stdin:
 
 ```bash
 echo -ne 'Content-Length: 73\r\n\r\n{"jsonrpc":"2.0","id":1,"method":"initialize","params":{"capabilities":{}}}' \
-  | java --enable-native-access=ALL-UNNAMED \
-         -jar lang/lsp-server/build/libs/lsp-server-0.4.4-SNAPSHOT-all.jar
+  | java -jar lang/lsp-server/build/libs/lsp-server-0.4.4-SNAPSHOT-all.jar
 ```
 
 You should see a JSON-RPC response containing the server's capabilities. The
 server also writes logs to `~/.xtc/logs/lsp-server.log`.
-
-If you built with the mock adapter, you can omit `--enable-native-access=ALL-UNNAMED`.
 
 ## Step 3: Connect to Your Editor
 
@@ -61,7 +58,7 @@ The LSP server communicates over **stdio** using the standard JSON-RPC protocol.
 Any editor with LSP support can use it by launching:
 
 ```bash
-java --enable-native-access=ALL-UNNAMED -jar /absolute/path/to/lsp-server-0.4.4-SNAPSHOT-all.jar
+java -jar /absolute/path/to/lsp-server-0.4.4-SNAPSHOT-all.jar
 ```
 
 Replace the jar path with the actual absolute path on your system.
@@ -89,7 +86,6 @@ vim.api.nvim_create_autocmd('FileType', {
       name = 'xtc-lsp',
       cmd = {
         'java',
-        '--enable-native-access=ALL-UNNAMED',
         '-jar',
         -- UPDATE THIS PATH to match your build output:
         '/absolute/path/to/lang/lsp-server/build/libs/lsp-server-0.4.4-SNAPSHOT-all.jar',
@@ -122,7 +118,6 @@ Add the following to your Emacs configuration (`~/.emacs.d/init.el` or
 (with-eval-after-load 'eglot
   (add-to-list 'eglot-server-programs
                '(prog-mode . ("java"
-                               "--enable-native-access=ALL-UNNAMED"
                                "-jar"
                                ;; UPDATE THIS PATH to match your build output:
                                "/absolute/path/to/lang/lsp-server/build/libs/lsp-server-0.4.4-SNAPSHOT-all.jar"))))
@@ -141,7 +136,6 @@ Then open a `.x` file and run `M-x eglot` to start the language server.
  (make-lsp-client
   :new-connection (lsp-stdio-connection
                    '("java"
-                     "--enable-native-access=ALL-UNNAMED"
                      "-jar"
                      ;; UPDATE THIS PATH:
                      "/absolute/path/to/lang/lsp-server/build/libs/lsp-server-0.4.4-SNAPSHOT-all.jar"))
@@ -185,7 +179,6 @@ Then install the `.vsix` from `lang/vscode-extension/build/distributions/`.
       "enabled": true,
       "command": [
         "java",
-        "--enable-native-access=ALL-UNNAMED",
         "-jar",
         "/absolute/path/to/lang/lsp-server/build/libs/lsp-server-0.4.4-SNAPSHOT-all.jar"
       ],
@@ -242,8 +235,16 @@ nvim --headless \
        print('definition=' .. tostring(c.definitionProvider)); \
        print('documentSymbol=' .. tostring(c.documentSymbolProvider)); \
        print('references=' .. tostring(c.referencesProvider)); \
-       print('rename=' .. tostring(c.renameProvider)); \
-       print('foldingRange=' .. tostring(c.foldingRangeProvider))" \
+       print('rename=' .. tostring(c.renameProvider ~= nil)); \
+       print('foldingRange=' .. tostring(c.foldingRangeProvider)); \
+       print('documentHighlight=' .. tostring(c.documentHighlightProvider)); \
+       print('selectionRange=' .. tostring(c.selectionRangeProvider)); \
+       print('documentLink=' .. tostring(c.documentLinkProvider ~= nil)); \
+       print('signatureHelp=' .. tostring(c.signatureHelpProvider ~= nil)); \
+       print('codeAction=' .. tostring(c.codeActionProvider)); \
+       print('formatting=' .. tostring(c.documentFormattingProvider)); \
+       print('rangeFormatting=' .. tostring(c.documentRangeFormattingProvider)); \
+       print('inlayHint=' .. tostring(c.inlayHintProvider))" \
   -c "qa" 2>&1
 ```
 
@@ -257,6 +258,14 @@ documentSymbol=true
 references=true
 rename=true
 foldingRange=true
+documentHighlight=true
+selectionRange=true
+documentLink=true
+signatureHelp=true
+codeAction=true
+formatting=true
+rangeFormatting=true
+inlayHint=true
 ```
 
 ### Request document symbols
@@ -326,6 +335,113 @@ enum Boolean
 ```​
 ```
 
+### Request folding ranges
+
+Sends `textDocument/foldingRange` and prints the ranges found:
+
+```bash
+nvim --headless \
+  -c "edit lib_ecstasy/src/main/x/ecstasy/Boolean.x" \
+  -c "sleep 5" \
+  -c "lua local params = { textDocument = vim.lsp.util.make_text_document_params() }; \
+       local results = vim.lsp.buf_request_sync(0, 'textDocument/foldingRange', params, 5000); \
+       for _, res in pairs(results or {}) do \
+         if res.result then \
+           print('Folding ranges: ' .. #res.result); \
+           for i, r in ipairs(res.result) do \
+             if i <= 5 then \
+               print('  lines ' .. r.startLine .. '-' .. r.endLine .. \
+                     (r.kind and (' [' .. r.kind .. ']') or '')) \
+             end \
+           end \
+         end \
+       end" \
+  -c "qa" 2>&1
+```
+
+### Request document highlights
+
+Sends `textDocument/documentHighlight` at a symbol position:
+
+```bash
+nvim --headless \
+  -c "edit lib_ecstasy/src/main/x/ecstasy/Boolean.x" \
+  -c "sleep 5" \
+  -c "lua vim.api.nvim_win_set_cursor(0, {1, 5}); \
+       local params = vim.lsp.util.make_position_params(); \
+       local results = vim.lsp.buf_request_sync(0, 'textDocument/documentHighlight', params, 5000); \
+       for _, res in pairs(results or {}) do \
+         if res.result then \
+           print('Highlights: ' .. #res.result) \
+         end \
+       end" \
+  -c "qa" 2>&1
+```
+
+### Request prepare rename
+
+Sends `textDocument/prepareRename` to verify identifier detection:
+
+```bash
+nvim --headless \
+  -c "edit lib_ecstasy/src/main/x/ecstasy/Boolean.x" \
+  -c "sleep 5" \
+  -c "lua vim.api.nvim_win_set_cursor(0, {1, 5}); \
+       local params = vim.lsp.util.make_position_params(); \
+       local results = vim.lsp.buf_request_sync(0, 'textDocument/prepareRename', params, 5000); \
+       for _, res in pairs(results or {}) do \
+         if res.result then \
+           local r = res.result; \
+           print('PrepareRename: ' .. (r.placeholder or vim.inspect(r))) \
+         end \
+       end" \
+  -c "qa" 2>&1
+```
+
+### Request document links
+
+Sends `textDocument/documentLink` on a file with imports:
+
+```bash
+nvim --headless \
+  -c "edit manualTests/src/main/x/TestSimple.x" \
+  -c "sleep 5" \
+  -c "lua local params = { textDocument = vim.lsp.util.make_text_document_params() }; \
+       local results = vim.lsp.buf_request_sync(0, 'textDocument/documentLink', params, 5000); \
+       for _, res in pairs(results or {}) do \
+         if res.result then \
+           print('Document links: ' .. #res.result); \
+           for i, l in ipairs(res.result) do \
+             if i <= 5 then \
+               print('  ' .. (l.tooltip or '(no tooltip)')) \
+             end \
+           end \
+         end \
+       end" \
+  -c "qa" 2>&1
+```
+
+### Request formatting
+
+Sends `textDocument/formatting` and checks for edits:
+
+```bash
+nvim --headless \
+  -c "edit lib_ecstasy/src/main/x/ecstasy/Boolean.x" \
+  -c "sleep 5" \
+  -c "lua local params = { \
+         textDocument = vim.lsp.util.make_text_document_params(), \
+         options = { tabSize = 4, insertSpaces = true } \
+       }; \
+       local results = vim.lsp.buf_request_sync(0, 'textDocument/formatting', params, 5000); \
+       for _, res in pairs(results or {}) do \
+         if res.result then \
+           print('Formatting edits: ' .. #res.result) \
+         end \
+       end" \
+  -c "qa" 2>&1
+```
+
 ### Check the log file after tests
 
 After running any of the above, verify the server logged the requests:
@@ -382,7 +498,7 @@ This means the tree-sitter native library could not be loaded. Either:
 If your default `java` is older than 25, point to the correct binary explicitly:
 
 ```bash
-/path/to/java-25/bin/java --enable-native-access=ALL-UNNAMED -jar lsp-server-0.4.4-SNAPSHOT-all.jar
+/path/to/java-25/bin/java -jar lsp-server-0.4.4-SNAPSHOT-all.jar
 ```
 
 Update the editor configuration to use the full path to the Java 25+ binary
